Fix warehouse header spacing issue

--- a/client/src/components/inventory-components/Inventory.scss
+++ b/client/src/components/inventory-components/Inventory.scss
@@ -176,7 +176,7 @@
   width: 100%;
   
     .inventoryList__th {
-      padding-right: 40px;
+      padding-right: 37px;
       color: #AFAFAF;
       text-align: left;
       display: inline-block;
@@ -319,5 +319,15 @@
   .inventoryList__container {
     margin: 0px 180px;
   }
+
+  // .inventoryItem__container {
+  //   .inventoryItem__tableRow {
+  //     td {
+
+  //     }
+  //   }
+  // }
+
+  
 
 }
