--- a/client/src/components/warehouse-components/warehouse-styles/warehouse-mediaqueries/_warehouse-desktop-view.scss
+++ b/client/src/components/warehouse-components/warehouse-styles/warehouse-mediaqueries/_warehouse-desktop-view.scss
@@ -58,7 +58,7 @@
           }
           &:nth-of-type(4) {
             margin-left: 0;
-            padding-right: 7%;
+            padding-right: 13%;
           }
         }
       }
